# Ledgr-QBS

./: .agents-cli-spec.md  .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  GEMINI.md  README.md  agents-cli-manifest.yaml  generate_eval_dataset.py  playground_profile.json  pyproject.toml  slack_bot.py  test_plugin.py
.cursor/rules/: plan-adversarial-review.mdc
.github/workflows/: ci.yml  deploy.yml  eval.yml
accounting_agents/: __init__.py  adk_web_qa.py  admin.py  agent.py  assistant.py  bank_feed_agent.py  bank_statement_extractor_agent.py  batch_schemas.py  chat_skills.py  clean_agent_slack.py  config.py  credit_delivery.py  fast_api_app.py  firestore_safe.py  hitl.py  invoice_agent.py  jurisdiction.py  lane_config.py  lease_lock.py  ledger_doc_identity.py  ledger_store.py  local_ledger_store.py  nodes.py  normalized_invoice_codec.py  playground_runner.py  qa_agent.py  sessions.py  slack_runner.py  tax_reasoning.py  tools.py
accounting_agents/app_utils/: telemetry.py  typing.py
accounting_agents/assistant/: __init__.py  constants.py  instruction.py
accounting_agents/assistant_tools/: __init__.py  _helpers.py  introspect.py
accounting_agents/chat_eval/: __init__.py  agent.py
accounting_agents/observability/: __init__.py  sentry_trends.py
accounting_agents/plugins/: __init__.py  ledgr_reflect_retry.py
accounting_agents/review/: __init__.py  classifier.py  grouping.py
app/: __init__.py  archive.py  blocks.py  coa_detect.py  coa_ingest.py  coa_validate.py  commands.py  config.py  credit_service.py  installation_store.py  main.py  native_blocks_compat.py  onboarding.py  processing.py  slack_app.py  socket_run.py
app/data/: standard_sg_sme_coa.json
artifacts/grade_results/: results_20260617_104937.html  results_20260617_104937.json  results_20260617_114906.html  results_20260617_114906.json  results_20260617_115023.html  results_20260617_115023.json  results_20260619_081534.html  results_20260619_081534.json  results_20260619_082406.html  results_20260619_082406.json  results_20260619_082504.html  results_20260619_082504.json  results_20260619_082909.html  results_20260619_082909.json  results_20260619_082934.html  results_20260619_082934.json  results_20260619_083135.html  results_20260619_083135.json
artifacts/traces/: b6_probe.json  chat_traces.json
deployment/: README.md
docs/: ROADMAP.md  block-kit-ui.md  build-map-categorization.md  dev-environment.md  forward-design-slack.md  slack-setup.md  ws2-ws3-build-spec.md
docs/adr/: 0001-deterministic-engine-in-a-slim-workflow-graph.md  0002-slack-as-system-of-record-fy-canvas-index.md  0003-hitl-via-adk-requestinput-in-the-slim-graph.md  0004-learning-via-structured-corrections-not-memory-bank.md  0005-canonical-schema-with-per-target-projection.md  0006-per-client-coa-onboarding.md  0007-hitl-review-edit-slack-surface.md  0008-chat-lane-standalone-root-agent.md  0009-chat-write-tools-via-tool-confirmation.md  0010-re-extract-scoped-no-source-file-column.md  0011-intelligent-understand-layer-drive-parity.md  README.md  (+24 more)
eval/: bank_eval.py  client_eval.py  coa_validate.py  document_record_eval.py  eval.py  extraction_tournament.py  extraction_tournament_soa.py  ledger_eval.py  ledgr_eval_generate.py  tournament_metric.py
invoice_processing/: __init__.py  agent.py  pipeline.py
ledgr_agent/: __init__.py  admin.py  agent.py  app.py  billing.py  client_registry.py
ledgr_coordinator/: __init__.py  agent.py  fast_api_app.py  prompt.py  tools.py
ledgr_slack/: __init__.py  __main__.py  app.py  app_home.py  batch_coordinator.py  client_context.py  client_store.py  config.py  context_cache_config.py  credit_adapter.py  credits_report.py  credits_view.py  dedup.py  delivery.py  delivery_notes.py  file_event.py  firestore_safe.py  gemini_call_config.py  genai_client.py  jurisdiction.py  lease_lock.py  ledger_doc_identity.py  ledger_store.py  ledger_store_append.py  ledger_store_base.py  ledger_store_mutate.py  legacy_tax_reference.py  model_config.py  observability.py  session.py  sessions.py  slack_shell.py  ux.py
legacy/: README.md  __init__.py
scratch/: debug_b4.py  inspect_state.py
scripts/: backfill_processing_log.py  check_no_pii.sh  check_slack_env.py  debug_classify_direction.py  debug_telco_bill.py  deploy-prod.sh  deploy.sh  eval_loop.py  gcloud-bootstrap-cicd.sh  gcloud-bootstrap-prod.sh  ledgr_chat_live_probe.py  ledgr_eval_chat.sh  ledgr_eval_compare.py  ledgr_eval_extraction.sh  ledgr_eval_light.sh  local_extract_demo.py  local_ledger_preview.py  local_soa_demo.py  local_tax_verify.py  qa_adk_playground_cli.sh  qa_credit_accuracy_localtest.py  repair_bank_ledger_balances.py  reset_bank_seen_keys.py  seed_slack_dev_channel.py  slack_live_test.py  slack_upload_and_process.py  smoke_native_blocks.py  spike_light_vs_factory.py  spike_minimal_extract_vs_pipeline.py  spike_vertex_enum_nested_array.py  trim_blocks_phase_a.py  trim_test_app_blocks_phase_a.py
slack/: README.md  manifest-dev.json  manifest-distributed.json  manifest-qbs.json  manifest-ready.json  manifest.json
tests/: _fake_firestore.py  _slack_test_helpers.py  conftest.py  test_account_flagged.py  test_adk_native_and_plugins.py  test_adk_web_qa.py  test_app_archive.py  test_app_blocks.py  test_app_coa_ingest.py  test_app_commands.py  test_app_config.py  test_app_oauth.py  test_app_onboarding.py  test_app_processing.py  test_app_slack.py  test_assistant_agent.py  test_assistant_tools_helpers.py  test_axis_resolvers.py  test_bank_bytes.py  test_batch_progress_ux.py  test_blocks.py  test_book_schema.py  test_categorize_llm.py  test_categorizer.py  test_chat_confirmation_e2e.py  test_clean_agent_cutover_flag.py  test_clean_agent_slack_dispatch.py  test_client_context.py  test_client_eval_json_output.py  test_client_eval_placement.py  test_coa_detect.py  test_coa_fixture_harness.py  test_coa_logprob_gate.py  test_coa_validate.py  test_concurrency.py  test_context_cache_config.py  test_coordinator_tools.py  test_country_currency_fail_loud.py  test_credit_billing_matrix.py  test_credit_delivery.py  (+83 more)
(+384 files in other folders)
