[project]
name = "ledgr-qbs"
version = "1.0.0"
description = "Ledgr QBS - Accounting Multi-Agent Framework"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ['agent-catalog', 'adk', 'agent']
readme = "README.md"

authors = [
    { name = "Pouya Ghiasnezhad Omran", email = "pgomran@google.com" },
    { name = "Tanya Dixit", email = "dixittanya@google.com" },
]

dependencies = [
    "google-adk>=2.0.0,<3.0.0",
    "google-cloud-aiplatform>=1.38.0",
    "vertexai>=1.38.0",
    "pydantic>=2.8.0",
    "pdfplumber>=0.10.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "openpyxl>=3.1.5",
    "google-cloud-firestore>=2.27.0",
    "slack-bolt>=1.28.0",
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "aiohttp>=3.14.1",
    "sentry-sdk>=2.0.0",
]

[project.urls]
Repository = "https://github.com/GoogleCloudPlatform/adk-samples"

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.0.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "ledgr_agent", "ledgr_slack"]

# Non-.py runtime data files must ship in the wheel (loaded at runtime).
[tool.hatch.build.targets.wheel.force-include]
"ledgr_agent/skills" = "ledgr_agent/skills"
"ledgr_slack/tax_reference" = "ledgr_slack/tax_reference"

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "agent-starter-pack>=0.14.1",
    "pytest>=9.0.3",
    "google-adk[eval]>=2.0.0,<3.0.0",
    "xlrd>=2.0.1",  # read legacy .xls ERP import templates in golden-format tests
]

[tool.pytest.ini_options]
# Only collect the test suite — keep pytest out of scripts/ and sample dirs.
testpaths = ["tests"]
# The agents-cli scaffold dropped integration/e2e + eval stubs under tests/.
# They make live LLM calls and boot a FastAPI server (creds + deploy wiring
# required), so they are kept OUT of the default fast unit loop. Run them
# deliberately: `uv run pytest tests/integration` (with creds + server) or
# `agents-cli eval` for tests/eval.
addopts = "--ignore=tests/integration --ignore=tests/eval --ignore=ledgr_agent/eval"
markers = [
    "unit: fast hermetic tests — default CI gate",
    "integration: live service / creds required",
    "eval: gated live eval — require Gemini creds; run with `pytest ledgr_agent/eval/ -m eval`",
]

[tool.agent_packs]
template = "adk"

[tool.agent-starter-pack]
example_question = "Process the invoice for case_001."

[tool.agent-starter-pack.settings]
agent_directory = "ledgr_agent"

[[tool.uv.index]]
name = "default"
url = "https://pypi.org/simple"
default = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# tracked: scripts do dotenv/sys.path setup before imports — E402 is intentional
"scripts/*.py" = ["E402"]
# tracked: eval scripts call load_dotenv() before project imports — E402 is intentional
"eval/*.py" = ["E402"]
# tracked: test module imports a symbol that is only registered after a prior import block
"tests/test_app_blocks.py" = ["E402"]
"tests/test_assistant_agent.py" = ["E402"]
